; ModuleID = '/home/carl/AnghaBench/libuv/src/unix/extr_linux-inotify.c_find_watcher.c'
source_filename = "/home/carl/AnghaBench/libuv/src/unix/extr_linux-inotify.c_find_watcher.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.watcher_list = type { i32 }
%struct.TYPE_3__ = type { i32 }

@watcher_root = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.watcher_list* (%struct.TYPE_3__*, i32)* @find_watcher to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.watcher_list* @find_watcher(%struct.TYPE_3__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.watcher_list, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = getelementptr inbounds %struct.watcher_list, %struct.watcher_list* %5, i32 0, i32 0
  store i32 %6, i32* %7, align 4
  %8 = load i32, i32* @watcher_root, align 4
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = call i32 @CAST(i32* %10)
  %12 = call %struct.watcher_list* @RB_FIND(i32 %8, i32 %11, %struct.watcher_list* %5)
  ret %struct.watcher_list* %12
}

declare dso_local %struct.watcher_list* @RB_FIND(i32, i32, %struct.watcher_list*) #1

declare dso_local i32 @CAST(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
